--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,21 @@
 title: "BiteCal"
 description: "BiteCal is a platform for logging meals, tracking dietary habits, and gaining insights to make healthier food choices."
-url: "http://localhost:4000"
-baseurl: "/BiteCal"
+url: "https://dlwldms7566.github.io/BiteCal"
 author: "BiteCal"
 contact_email: "kwen0730@gmail.com"
 
-# 디렉토리 및 출력 설정
 markdown: kramdown
 permalink: pretty
 timezone: "Asia/Seoul"
 
-# SEO 및 플러그인
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
 
-# 제외할 파일
 exclude:
   - README.md
   - node_modules
   - .git
   - .vscode
 
-# 언어 설정
-lang: "ko"
