--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,8 +19,7 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
-   - requirements: docs/source/requirements.txt
-        
+   - requirements: docs/source/requirements.txt       
 project: 'BiteCal'
 
 on:
@@ -33,5 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install dependencies
         run: pip install sphinx
+      - name: Build documentation
         run: sphinx-build docs docs/_build
