--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,19 +19,4 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
-   - requirements: docs/source/requirements.txt       
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: pip install sphinx
-      - name: Build documentation
-        run: sphinx-build docs docs/_build
+   - requirements: docs/requirements.txt
