--- a/website/_config.yml
+++ b/website/_config.yml
@@ -36,6 +36,12 @@ theme: minima
 plugins:
   - jekyll-feed
 
+menu_order:
+  - home
+  - calendar
+  - log
+  - star
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
