--- a/website/_config.yml
+++ b/website/_config.yml
@@ -37,10 +37,10 @@ plugins:
   - jekyll-feed
 
 menu_order:
-  - home
-  - calendar
-  - log
-  - star
+  - Home
+  - Calendar
+  - Log
+  - Star
 
 # Exclude from processing.
 # The following items will not be processed, by default.
